tests/sksl/errors/ProgramTooLarge_Struct.glsl
### Compilation failed:

error: 2: array size is too large
    int4 big[25001]; // 100,004 slots
    ^^^^^^^^^^^^^^^
error: 5: struct is too large
struct B {
^^^^^^^^^^...
error: 15: struct is too large
struct D {
^^^^^^^^^^...
3 errors
